--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
   "author": "Muhammad D. Ramadhan",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-react-jsx": "^7.12.12",
+    "@babel/preset-env": "^7.12.11",
+    "@rollup/plugin-alias": "^3.1.1",
     "compression": "^1.7.4",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "preact": "^10.5.7",
+    "preact-render-to-string": "^5.1.12"
   },
   "devDependencies": {
+    "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
