--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "nodemon": "nodemon --watch build/server.js build/server.js",
     "rollup": "rollup --config --watch",
-    "start": "npm-run-all --parallel nodemon rollup"
+    "start": "npm-run-all --parallel nodemon rollup",
+    "test": "jest"
   },
   "keywords": [
     "preact",
@@ -16,18 +17,23 @@
   "author": "Muhammad D. Ramadhan",
   "license": "MIT",
   "dependencies": {
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
+    "preact": "^10.5.7",
+    "preact-render-to-string": "^5.1.12",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-pender": "^2.0.12"
+  },
+  "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-react-jsx": "^7.12.12",
     "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-alias": "^3.1.1",
-    "compression": "^1.7.4",
-    "express": "^4.17.1",
-    "preact": "^10.5.7",
-    "preact-render-to-string": "^5.1.12"
-  },
-  "devDependencies": {
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-node-resolve": "^11.0.1",
+    "jest": "^26.6.3",
+    "jest-preset-preact": "^4.0.2",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.35.1"
