--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "jest": "^26.6.3",
     "jest-preset-preact": "^4.0.2",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.35.1"
+    "rollup": "^2.35.1",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
