--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
         [
             "@babel/preset-env",
             {
-                "useBuiltIns": "entry"
+                "targets": "> 0.25%, not dead"
             }
         ]
     ],
