--- a/package.json
+++ b/package.json
@@ -33,11 +33,17 @@
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
+    "core-js": "^3.8.1",
+    "cssnano": "^4.1.10",
     "jest": "^26.6.3",
     "jest-preset-preact": "^4.0.2",
+    "node-sass": "^5.0.0",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.2.2",
     "rollup": "^2.35.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.32.0"
   }
 }
