--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
   "author": "Muhammad D. Ramadhan",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "preact": "^10.5.7",
+    "preact-context": "^1.1.4",
     "preact-render-to-string": "^5.1.12",
     "preact-router": "^3.2.1",
+    "prop-types": "^15.7.2",
+    "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-actions": "^2.6.5",
-    "redux-pender": "^2.0.12"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -43,8 +46,10 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.2",
     "rollup": "^2.35.1",
+    "rollup-plugin-inject": "^3.0.2",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.32.0"
+    "sass": "^1.32.0",
+    "tslib": "^2.0.3"
   }
 }
