--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "preact": "^10.5.7",
-    "preact-context": "^1.1.4",
     "preact-render-to-string": "^5.1.12",
     "preact-router": "^3.2.1",
     "prop-types": "^15.7.2",
@@ -45,6 +44,7 @@
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.2",
+    "redux-devtools-extension": "^2.13.8",
     "rollup": "^2.35.1",
     "rollup-plugin-inject": "^3.0.2",
     "rollup-plugin-postcss": "^4.0.0",
