--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "redux-devtools-extension": "^2.13.8",
     "rollup": "^2.35.1",
     "rollup-plugin-inject": "^3.0.2",
+    "rollup-plugin-inject-process-env": "^1.3.1",
     "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.32.0",
     "tslib": "^2.0.3"
