--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/preact": "^2.0.1",
     "core-js": "^3.8.1",
     "cssnano": "^4.1.10",
     "jest": "^26.6.3",
