--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/preact": "^2.0.1",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.8.1",
     "cssnano": "^4.1.10",
     "jest": "^26.6.3",
