--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "author": "Muhammad D. Ramadhan",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.1",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "preact": "^10.5.7",
@@ -31,10 +30,12 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-react-jsx": "^7.12.12",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/preact": "^2.0.1",
@@ -48,6 +49,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.2",
     "redux-devtools-extension": "^2.13.8",
+    "regenerator-runtime": "^0.13.7",
     "rollup": "^2.35.1",
     "rollup-plugin-inject": "^3.0.2",
     "rollup-plugin-inject-process-env": "^1.3.1",
