--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "lodash.throttle": "^4.1.1",
     "preact": "^10.5.7",
     "preact-render-to-string": "^5.1.12",
     "preact-router": "^3.2.1",
